<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/top_tab_bg"
    android:padding="0dp"
    android:layout_margin="0dp"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/tvChuyenMuc"
        android:layout_width="0dp"
        android:layout_height="@dimen/top_tab_height"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/Chuyen_muc"
        android:textColor="@color/font_tab_color"
        android:textSize="@dimen/font_tab_color" />

    <TextView
        android:id="@+id/tvPaid"
        android:layout_width="0dp"
        android:layout_height="@dimen/top_tab_height"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/Da_mua"
        android:textColor="@color/font_tab_color"
        android:textSize="@dimen/font_tab_color" />

    <TextView
        android:id="@+id/tvHuongDan"
        android:layout_width="0dp"
        android:layout_height="@dimen/top_tab_height"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/Huong_dan"
        android:textColor="@color/font_tab_color"
        android:textSize="@dimen/font_tab_color" />

</LinearLayout>