<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/main_bg"
    android:padding="@dimen/std_pad" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_marginTop="12dp"
                android:text="@string/QNA_Text"
                android:textColor="@color/font_std"
                android:textSize="@dimen/font_std" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/edit_text_height"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/Email"
                android:paddingLeft="@dimen/std_pad"
                android:textSize="@dimen/font_std" />

            <EditText
                android:id="@+id/etContent"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/std_pad_x2"
                android:background="@drawable/edit_text_bg"
                android:gravity="top|left"
                android:hint="@string/Content"
                android:minHeight="@dimen/email_content_min_height"
                android:paddingLeft="@dimen/std_pad"
                android:paddingTop="@dimen/std_pad"
                android:textSize="@dimen/font_std" />

            <Button
                android:id="@+id/btSend"
                style="@style/Standard_Button"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/std_btn_height"
                android:layout_marginTop="@dimen/std_pad_x2"
                android:text="@string/Send_email" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>